experimental/parser/testdata/parser/enum/incomplete.proto.stderr.txt
error: missing enum value in declaration
  --> testdata/parser/enum/incomplete.proto:6:5
   |
 6 |     NO_TAG;
   |     ^^^^^^^

error: missing enum value in declaration
  --> testdata/parser/enum/incomplete.proto:7:5
   |
 7 |     NO_TAG2
   |     ^^^^^^^

error: unexpected `}` after definition
  --> testdata/parser/enum/incomplete.proto:8:1
   |
 8 | }
   | ^ expected `;`
   |
  help: consider inserting a `;`
   |
 7 |     NO_TAG2;
   |            +

encountered 3 errors
